force-app/main/default/objects/Lead/fields/Craft_Needs__c.field-meta.xml
<CustomField>
    <fullName>Craft_Needs__c</fullName>
    <description>Identifies the trades where there are gaps for the potential customer</description>
    <label>Craft Needs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Kodiak_Craft_List</valueSetName>
    </valueSet>
</CustomField>