force-app/main/default/objects/Lead/fields/Craft_Worker_Referral__c.field-meta.xml
<CustomField>
    <fullName>Craft_Worker_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the craft worker who referred the lead</description>
    <label>Craft Worker Referral</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Candidate</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referred Leads</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>