force-app/main/default/objects/Lead/fields/Current_Staffing_Customer__c.field-meta.xml
<CustomField>
    <fullName>Current_Staffing_Customer__c</fullName>
    <description>Identifies whether the potential customer uses staffing currently</description>
    <label>Current Staffing Customer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>