force-app/main/default/objects/Lead/fields/Customer_Referral__c.field-meta.xml
<CustomField>
    <fullName>Customer_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the customer contact who referred the lead</description>
    <label>Customer Referral</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referred Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>