force-app/main/default/objects/Lead/fields/Direct_Hire_Needs__c.field-meta.xml
<CustomField>
    <fullName>Direct_Hire_Needs__c</fullName>
    <description>Can this company use direct hire help?</description>
    <label>Direct Hire Needs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>