force-app/main/default/objects/Lead/fields/Expected_Job_Duration__c.field-meta.xml
<CustomField>
    <fullName>Expected_Job_Duration__c</fullName>
    <description>Used to help calculate quote - this is the rough estimate of job duration</description>
    <label>Expected Job Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Expected_Job_Duration</valueSetName>
    </valueSet>
</CustomField>