force-app/main/default/objects/Lead/fields/Job_State__c.field-meta.xml
<CustomField>
    <fullName>Job_State__c</fullName>
    <description>Used to help calculate quote - this is the state the potential job will be in</description>
    <label>Job State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>US_States</valueSetName>
    </valueSet>
</CustomField>