force-app/main/default/objects/Lead/fields/Kodiak_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Kodiak_Referrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates what Kodiak employee referred the lead to sales</description>
    <label>Kodiak Referrer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>