force-app/main/default/objects/Lead/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <description>Identifies the lead as a Comfort Systems OpCo or external company. Used to determine what price book should be associated</description>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Price_Books</valueSetName>
    </valueSet>
</CustomField>