force-app/main/default/objects/Lead/fields/Marketing_Persona__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Persona__c</fullName>
    <description>Identifies the marketing audience this contact will be part of</description>
    <label>Marketing Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Persona</valueSetName>
    </valueSet>
</CustomField>