force-app/main/default/objects/Lead/fields/Other_Craft_Needs__c.field-meta.xml
<CustomField>
    <fullName>Other_Craft_Needs__c</fullName>
    <description>If &quot;Other&quot; is chosen in Craft Needs, what are the other crafts they need help with?</description>
    <inlineHelpText>If &quot;Other&quot; is chosen in Craft Needs, what are the other crafts they need help with?</inlineHelpText>
    <label>Other Craft Needs</label>
    <type>TextArea</type>
</CustomField>