force-app/main/default/objects/Lead/fields/Other_In_House_Trades__c.field-meta.xml
<CustomField>
    <fullName>Other_In_House_Trades__c</fullName>
    <description>If &quot;Other&quot; is chosen from In House Trades, populate what those trades are here</description>
    <inlineHelpText>If &quot;Other&quot; is chosen from In House Trades, populate what those trades are here</inlineHelpText>
    <label>Other In House Trades</label>
    <type>TextArea</type>
</CustomField>