force-app/main/default/objects/Lead/fields/Per_Diem_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Per_Diem_Distribution__c</fullName>
    <description>Used to help calculate quote - these are the days that the per diem applies to</description>
    <label>Per Diem Distribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Per_Diem_Distribution</valueSetName>
    </valueSet>
</CustomField>