force-app/main/default/objects/Lead/fields/Project_Types__c.field-meta.xml
<CustomField>
    <fullName>Project_Types__c</fullName>
    <description>Dependent field, based on Industry</description>
    <label>Project Types</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <restricted>true</restricted>
        <valueSetName>Project_Types</valueSetName>
    </valueSet>
</CustomField>