force-app/main/default/objects/Lead/fields/Purchase_List__c.field-meta.xml
<CustomField>
    <fullName>Purchase_List__c</fullName>
    <description>Name of the purchased list</description>
    <label>Purchase List</label>
    <length>50</length>
    <type>Text</type>
</CustomField>