force-app/main/default/objects/Lead/fields/Referral_Job__c.field-meta.xml
<CustomField>
    <fullName>Referral_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates what job the referral came from</description>
    <label>Referral Job</label>
    <referenceTo>bpats__Job__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>