force-app/main/default/objects/Lead/fields/Self_Perform__c.field-meta.xml
<CustomField>
    <fullName>Self_Perform__c</fullName>
    <description>Does the company self perform any work?</description>
    <label>Self Perform?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>