force-app/main/default/objects/Lead/fields/Trade_Association_Contact__c.field-meta.xml
<CustomField>
    <fullName>Trade_Association_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the contact at the trade association that referred the lead</description>
    <label>Trade Association Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Contact must be a partner contact related to a partner org account</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referred Leads</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>