force-app/main/default/objects/Lead/fields/Trade_Show__c.field-meta.xml
<CustomField>
    <fullName>Trade_Show__c</fullName>
    <description>Name of the trade show that the lead came from</description>
    <label>Trade Show</label>
    <length>30</length>
    <type>Text</type>
</CustomField>